--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,1 +1,67 @@
-/** CSS STYLE **/
+:root {
+    --white: #fff;
+    --whiteTransparent: #d7ccc0;
+    --light: #f5f4f0;
+    --primary: #fe8a02;
+    --primaryDark: #42413c;
+    --dark: #2a2626;
+    --darkTransparent: #908d8b;;
+    --brown: #b09a81;
+    --blue: #1085c5;
+}
+
+/* Fonts */
+@font-face {
+    font-family: 'Open Sans';
+    src: url('../assets/fonts/OpenSans-Regular.ttf');
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: 'Neucha';
+    src: url('../assets/fonts/Neucha-Regular.ttf');
+    font-weight: 400;
+}
+
+/* Styles basis */
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Open-Sans';
+}
+
+.font-neucha {
+    font-family: 'Neucha';
+    font-size: 16px;
+    line-height: 1.6rem;
+    color: var(--dark);
+}
+
+h1,
+h2,
+h3 {
+    font-family: 'Neucha';
+    font-size: 16px;
+    line-height: 1.6em;
+}
+
+h1 {
+    font-size: 72px;
+}
+
+h2 {
+    font-size: 60px;
+}
+
+h3 {
+    font-size: 34px;
+}
+
+.header,
+.main,
+.footer {
+    position: relative;
+    margin-right: auto;
+    margin-left:auto;
+    max-width: 1110px;;
+}
